--- a/style.css
+++ b/style.css
@@ -222,6 +222,39 @@ footer ul {
     box-shadow: 5px 10px 10px rgba(134, 251, 251, 0.2);
 }
 
+@media (min-width: 550px) {
+    article {
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        gap: 2rem;
+    }
+    #projects img {
+        grid-column: 1/6;
+        grid-row: 1/2;
+    }
+    .text {
+        grid-column: 5/12;
+        grid-row: 1/2;
+        order: 2;
+        text-align: right;
+    }
+    #projects ul {
+        justify-content: flex-end;
+    }
+
+    #reverse img {
+        grid-column: 6/12;
+    }
+    #reverse .text {
+        grid-column: 1/7;
+        grid-row: 1/2;
+        text-align: left;
+    }
+    #reverse ul {
+        justify-content: flex-start;
+    }
+}
+
 
 /* Background color divs*/
 .gradient {
